# Synthetic_E-Commerce_Data_Lake

./: .gitignore  README.md  main.py  pyproject.toml
infra/: main.tf  outputs.tf  variables.tf
orchestration/: .gitignore  pyproject.toml
orchestration/dags/: ecommerce_pipeline.py
schemas/: bq_schema.json
src/backend/generator/: producer.py
src/generator/: producer.py
src/ingestion/: main.py  mover.py  requirements.txt
tests/: test_ingestion.py  test_producer.py
transformation/: .user.yml  dbt_project.yml  profiles.yml
transformation/models/: sources.yml
transformation/models/marts/: fct_ad_campaigns.sql  fct_daily_product_performance.sql  fct_daily_sales.sql  fct_sales_transactions.sql  fct_user_sessions.sql
transformation/models/reporting/: rpt_customer_ltv.sql  rpt_peak_traffic_hours.sql  rpt_regional_performance.sql  rpt_top_products.sql  rpt_user_engagement.sql
transformation/models/staging/: stg_ad_clicks.sql  stg_add_to_cart.sql  stg_events.sql  stg_page_views.sql  stg_purchase.sql
