[project]
name = "synthetic-e-commerce-data-lake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.1.0",
    "functions-framework>=3.10.0",
    "google-cloud-pubsub>=2.34.0",
    "google-cloud-storage>=3.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv.workspace]
members = [
    "orchestration",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyright]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
